# liqui-test

./: .gitignore  app.py  pyproject.toml  requirements.txt
static/css/: styles.css
static/js/: chart.js
templates/: index.html
